Modify for the workflow to run

--- a/static/home.html
+++ b/static/home.html
@@ -75,7 +75,7 @@
         <section>
             <h2>Overview</h2>
             <p>I am working on various projects where I am learning how to deploy various applications.
-                I have recently got the Azure free subscription, so I am learning that with Azure Devops.
+                I have recently got the Azure free subscription, so I am learning how to deploy application on AKS.
                 Next, I'll be learning Ansible.
             </p>
         </section>
