--- a/static/home.html
+++ b/static/home.html
@@ -76,7 +76,7 @@
             <h2>Overview</h2>
             <p>I am working on various projects where I am learning how to deploy various applications.
                 I have recently got the Azure free subscription, so I am learning how to deploy application on AKS.
-                Next, I'll be learning Ansible.
+                Next, I'll be learning Linux and Ansible.
             </p>
         </section>
     </main>
